[gd_scene load_steps=3 format=3 uid="uid://c2dpu2l8bjvir"]

[ext_resource type="Script" uid="uid://dvbqdk7tm0sbj" path="res://scripts/start_menu.gd" id="1_ouf4f"]
[ext_resource type="VideoStream" uid="uid://bd8ctnnjapgux" path="res://141512-777708212 Medium.ogv" id="2_thu50"]

[node name="start_menu" type="Node2D"]
script = ExtResource("1_ouf4f")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_left = -210.0
offset_top = -83.0
offset_right = 373.0
offset_bottom = 249.0
stream = ExtResource("2_thu50")
speed_scale = 1.447
autoplay = true
expand = true
loop = true

[node name="Button" type="Button" parent="."]
offset_right = 169.0
offset_bottom = 46.0
text = "start game"

[node name="Button2" type="Button" parent="."]
offset_top = 76.0
offset_right = 169.0
offset_bottom = 122.0
text = "exit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(79, 84)
zoom = Vector2(2, 2)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
